--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,8 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  background-color: #fafafa;
+  /* overflow-x: hidden; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
